Refactor plots update/delete to use HTTP instead of Socket.io
