# src/specs/api.yaml
@@ -151,7 +151,7 @@ paths:
       x-eov-operation-handler: routes/experiment
       responses:
         '200':
-          description: successful operation
+          description: 'Fetch successful, response below.'
           content:
             application/json:
               schema:
@@ -161,8 +161,6 @@ paths:
                     type: array
                     items:
                       $ref: '#/components/schemas/CellSets'
-        '400':
-          description: Invalid ID supplied.
         '404':
           description: Experiment not found
     parameters:
@@ -179,7 +177,7 @@ paths:
       x-eov-operation-handler: routes/experiment
       responses:
         '200':
-          description: OK
+          description: Update to object in response successful.
           content:
             application/json:
               schema:
@@ -196,6 +194,67 @@ paths:
               items:
                 allOf:
                   - $ref: '#/components/schemas/CellSets'
+  '/experiments/{experimentId}/plots-tables/{plotUuid}':
+    parameters:
+      - schema:
+          type: string
+        name: plotUuid
+        in: path
+        required: true
+      - schema:
+          type: string
+        name: experimentId
+        in: path
+        required: true
+    put:
+      summary: ''
+      operationId: updatePlotTable
+      x-eov-operation-id: 'plots-tables#update'
+      x-eov-operation-handler: routes/plots-tables
+      responses:
+        '200':
+          description: Update to object in response successful.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PlotTableConfig'
+        '201':
+          description: New resource created.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PlotTableConfig'
+        '404':
+          description: Invalid experiment ID specified.
+      description: Updates a plot and table for a given experiment with the data specified.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PlotTableConfig'
+        description: The new configuration to update the old one by.
+    get:
+      summary: ''
+      operationId: getPlotTable
+      x-eov-operation-id: 'plots-tables#read'
+      x-eov-operation-handler: routes/plots-tables
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PlotTableConfig'
+      description: Reads a plot and table for a given experiment with the data specified.
+    delete:
+      summary: ''
+      operationId: deletePlotTable
+      x-eov-operation-id: 'plots-tables#delete'
+      x-eov-operation-handler: routes/plots-tables
+      responses:
+        '200':
+          description: OK
+      description: Deletes a plot and table for a given experiment with the data specified.
 components:
   securitySchemes: {}
   schemas:
@@ -538,53 +597,27 @@ components:
         - $ref: '#/components/schemas/WorkSchemaGeneExpression'
       title: WorkRequestBodies
       description: Valid work request bodies.
-    PlotConfigRequest:
-      title: PlotConfigRequest
+    PlotTableConfig:
+      title: PlotTableConfig
       type: object
-      description: Request model to save plots configuration
+      description: A file specifying the configuration for a given plot/table.
       properties:
-        uuid:
-          type: string
-          description: A UUID generated by the client submitting the work. Will be used to map `PlotConfigResponse` objects to the request submitted
         experimentId:
           type: string
-          description: The ID of the experiment for which this work was created
-        body:
-          type: object
-        operation:
+          description: The ID of the experiment.
+        plotUuid:
           type: string
-          description: Describes the type of CRUD operation
+          description: The UUID of the plot or table.
+        type:
+          type: string
+          description: The type of the plot to be saved. Can be one of the values specified herein.
           enum:
-            - create
-            - read
-            - update
-            - delete
-        plotName:
-          type: string
-          description: Name of the particular plot from plots and tables section
+            - embeddingCategorical
+            - embeddingContinuous
+            - volcano
+            - heatmap
+        config:
+          type: object
       required:
-        - uuid
-        - experimentId
-        - operation
-        - plotName
-    PlotConfigResponse:
-      title: PlotConfigResponse
-      type: object
-      properties:
-        result:
-          type: string
-          description: Indicates the status of the response
-          enum:
-            - error
-            - success
-        operation:
-          description: Describes the type of CRUD operation
-          type: string
-          enum:
-            - create
-            - read
-            - update
-            - delete
-        payload:
-          description: The object that describes a plot configuration
-          type: object
+        - type
+        - config
